--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "dummyBankApi",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "sample api for serving frontend material ui app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "keywords": [
-    "sample",
-    "api",
-    "nodejs"
-  ],
+  "keywords": ["sample", "api", "nodejs"],
   "author": "nmpegetis",
   "license": "MIT",
   "devDependencies": {
